compiler/fir/analysis-tests/testData/resolve/delegateByArrayLiteral.kt
// ISSUE: KT-65022

val d by <!DELEGATE_SPECIAL_FUNCTION_MISSING, UNSUPPORTED!>[]<!>
